# Game-Settings-Master

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  SECURITY.md  e2e.html  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.html  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .clippy.toml  Cargo.toml  build.rs  preset-server.default.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/catalog/: display.json  key_hints.json  scalability.json  subnautica2.json  ue4.json  ue_extended.json  ue_reference_index.json  unity.json
src-tauri/games/: known.json
src-tauri/presets/: epic.json  high.json  low.json  medium.json  ultra-high.json  ultra-low.json
src-tauri/presets/engines/: high-stabilize.ini  high.ini  medium-stabilize.ini  ultra-high.ini  ultra-low.ini
src-tauri/presets/reshade/: ATTRIBUTION.txt  LICENSE-ReShade.txt  binary-hashes.json
src-tauri/presets/ue4/: ultra-high.json  ultra-low.json
src-tauri/presets/unity/: epic.json  medium.json  ultra-high.json  ultra-low.json
src-tauri/src/: app_error.rs  bindings_export.rs  lib.rs  main.rs  models.rs  process_util.rs  profiles.rs  resource_paths.rs
src-tauri/src/backup/: backup_tests.rs  migrate.rs  mod.rs  paths.rs  reset.rs  restore.rs  snapshot.rs
src-tauri/src/catalog/: catalog_index.rs  dedupe.rs  humanize.rs  injection.rs  loader.rs  loader_tests.rs  localize.rs  mod.rs  parameter_build.rs  scalability_tiers.rs  scalability_tiers_tests.rs  types.rs  unknown.rs  version.rs
src-tauri/src/commands/: backups.rs  config.rs  crash_report.rs  games.rs  helpers.rs  launch.rs  mod.rs  preset_apply.rs  reshade.rs  system.rs
src-tauri/src/core/: app_error.rs  app_error_tests.rs  mod.rs  models.rs  process_util.rs  resource_paths.rs  resource_paths_tests.rs
src-tauri/src/covers/: covers_tests.rs  custom.rs  enrich.rs  mod.rs  steam.rs
src-tauri/src/crash_report/: crash_report_tests.rs  mod.rs  storage.rs
src-tauri/src/discovery/: config_index.rs  dedupe.rs  discovery_tests.rs  drives.rs  enrich.rs  epic.rs  manual.rs  (+10 more)
(+693 files in other folders)
